chore: reorganize folders for better service modularity
